--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -4846,8 +4846,8 @@ spec:
                       description: DevWorkspace Operator configuration.
                       properties:
                         runningLimit:
-                          description: The maximum number of running workspaces per
-                            user.
+                          description: Deprecated in favor of `MaxNumberOfRunningWorkspacesPerUser`
+                            The maximum number of running workspaces per user.
                           type: string
                       type: object
                     devfileRegistry:
@@ -5408,7 +5408,8 @@ spec:
                       autoProvision: true
                       template: <username>-che
                     disableContainerBuildCapabilities: true
-                    maxNumberOfWorkspacePerUser: -1
+                    maxNumberOfRunningWorkspacesPerUser: 1
+                    maxNumberOfWorkspacesPerUser: -1
                     secondsOfInactivityBeforeIdling: 1800
                     secondsOfRunBeforeIdling: -1
                     startTimeoutSeconds: 300
@@ -6976,7 +6977,13 @@ spec:
                       default: true
                       description: Disables the container build capabilities.
                       type: boolean
-                    maxNumberOfWorkspacePerUser:
+                    maxNumberOfRunningWorkspacesPerUser:
+                      default: 1
+                      description: The maximum number of running workspaces per user.
+                      format: int32
+                      minimum: 1
+                      type: integer
+                    maxNumberOfWorkspacesPerUser:
                       default: -1
                       description: Total number of workspaces, both stopped and running,
                         that a user can keep. The default value, `-1`, allows users
