--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -4729,8 +4729,8 @@ spec:
                     description: DevWorkspace Operator configuration.
                     properties:
                       runningLimit:
-                        description: The maximum number of running workspaces per
-                          user.
+                        description: Deprecated in favor of `MaxNumberOfRunningWorkspacesPerUser`
+                          The maximum number of running workspaces per user.
                         type: string
                     type: object
                   devfileRegistry:
@@ -5283,7 +5283,8 @@ spec:
                     autoProvision: true
                     template: <username>-che
                   disableContainerBuildCapabilities: true
-                  maxNumberOfWorkspacePerUser: -1
+                  maxNumberOfRunningWorkspacesPerUser: 1
+                  maxNumberOfWorkspacesPerUser: -1
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   startTimeoutSeconds: 300
@@ -6800,7 +6801,13 @@ spec:
                     default: true
                     description: Disables the container build capabilities.
                     type: boolean
-                  maxNumberOfWorkspacePerUser:
+                  maxNumberOfRunningWorkspacesPerUser:
+                    default: 1
+                    description: The maximum number of running workspaces per user.
+                    format: int32
+                    minimum: 1
+                    type: integer
+                  maxNumberOfWorkspacesPerUser:
                     default: -1
                     description: Total number of workspaces, both stopped and running,
                       that a user can keep. The default value, `-1`, allows users
