--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -25,3 +25,5 @@ entries:
     replaces: eclipse-che.v7.58.0
   - name: eclipse-che.v7.60.0
     replaces: eclipse-che.v7.59.0
+  - name: eclipse-che.v7.60.1
+    replaces: eclipse-che.v7.60.0
