chore:use UDI with ubi8-latest tag
Replaces UDI:ubi8-38da5c2 with UDI:ubi8-latest to have latest changes form the universal developer image (UDI) in the default component.

Signed-off-by: Valerii Svydenko <vsvydenk@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -2211,7 +2211,7 @@ spec:
                   workspaceDefaultComponents:
                     default:
                     - container:
-                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                        image: quay.io/devfile/universal-developer-image:ubi8-latest
                       name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These
                       default components are meant to be used when a Devfile does
@@ -5234,7 +5234,7 @@ spec:
                 default:
                   defaultComponents:
                   - container:
-                      image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                      image: quay.io/devfile/universal-developer-image:ubi8-latest
                     name: universal-developer-image
                   defaultEditor: che-incubator/che-code/latest
                   defaultNamespace:
@@ -5261,7 +5261,7 @@ spec:
                   defaultComponents:
                     default:
                     - container:
-                        image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
+                        image: quay.io/devfile/universal-developer-image:ubi8-latest
                       name: universal-developer-image
                     description: Default components applied to DevWorkspaces. These
                       default components are meant to be used when a Devfile, that
