--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -8,8 +8,6 @@
 #
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
-#
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,7 +37,7 @@ spec:
     spec:
       containers:
         - name: che-operator
-          image: quay.io/eclipse/che-operator:next
+          image: quay.io/eclipse/che-operator:7.63.0
           command:
             - /manager
           args:
@@ -60,15 +58,15 @@ spec:
             - name: OPERATOR_NAME
               value: che-operator
             - name: CHE_VERSION
-              value: next
+              value: 7.63.0
             - name: RELATED_IMAGE_che_server
-              value: quay.io/eclipse/che-server:next
+              value: quay.io/eclipse/che-server:7.63.0
             - name: RELATED_IMAGE_dashboard
-              value: quay.io/eclipse/che-dashboard:next
+              value: quay.io/eclipse/che-dashboard:7.63.0
             - name: RELATED_IMAGE_plugin_registry
-              value: quay.io/eclipse/che-plugin-registry:next
+              value: quay.io/eclipse/che-plugin-registry:7.63.0
             - name: RELATED_IMAGE_devfile_registry
-              value: quay.io/eclipse/che-devfile-registry:next
+              value: quay.io/eclipse/che-devfile-registry:7.63.0
             - name: RELATED_IMAGE_che_tls_secrets_creation_job
               value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
             - name: RELATED_IMAGE_single_host_gateway
@@ -96,7 +94,7 @@ spec:
             - name: CONSOLE_LINK_IMAGE
               value: /dashboard/assets/branding/loader.svg
             - name: MAX_CONCURRENT_RECONCILES
-              value: "1"
+              value: '1'
           livenessProbe:
             httpGet:
               path: /healthz
